move files in folders

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="creatures.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/creatures.js"></script>
 </head>
 
 <body>
-    <div class="container">
+    
+    <!-- <div class="container">
         <select name="Раса" id="fractions">
             <option value="castle">Замок</option>
             <option value="rampart">Оплот</option>
@@ -33,7 +34,7 @@
         <input id="count" placeholder="сколько"></input>
         <input id="pitlords" placeholder="питов"></input>
         <input id="result" value="0 демонов"></input>
-    </div>
+    </div> -->
     <footer>
         <span>Наскрябал UniverAlex</span>
     </footer>
