--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/creatures.js"></script>
+    <script type="text/javascript" src="js/ui.js"></script>
+    <!-- <script type="text/javascript" src="js/creatures.js"></script> -->
 </head>
 
 <body>
-    
+    <div class="towns">
+        <div class="towns--castle"></div>
+        <div class="towns--conflux"></div>
+        <div class="towns--cove"></div>
+        <div class="towns--dungeon"></div>
+        <div class="towns--fortress"></div>
+        <div class="towns--inferno"></div>
+        <div class="towns--necropolis"></div>
+        <div class="towns--neutral"></div>
+        <div class="towns--rampart"></div>
+        <div class="towns--stronghold"></div>
+        <div class="towns--tower"></div>
+    </div>
     <!-- <div class="container">
         <select name="Раса" id="fractions">
             <option value="castle">Замок</option>
