pitlord scratching ass

--- a/index.html
+++ b/index.html
@@ -24,41 +24,44 @@
             <div class="towns--stronghold"></div>
             <div class="towns--tower"></div>
         </div>
-        <div class="creatures">
-            <div class="row">
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
+        <div class="container2">
+            <div class="creatures">
+                <div class="row">
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
                 </div>
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
+                <div class="row">
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
+                    <div class="creature">
+                        <div class="simple"></div>
+                        <div class="upgraded"></div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
-                </div>
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
-                </div>
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
-                </div>
-                <div class="creature">
-                    <div class="simple"></div>
-                    <div class="upgraded"></div>
-                </div>
-            </div>
+            <div class="pitlord"></div>
         </div>
     </div>
 
