--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/view.js"></script>
@@ -12,56 +13,50 @@
 <body>
     <div class="container">
         <div class="towns">
-            <div id="castle" class="towns--castle"></div>
-            <div id="conflux" class="towns--conflux"></div>
-            <div class="towns--cove"></div>
-            <div class="towns--dungeon"></div>
-            <div class="towns--fortress"></div>
-            <div class="towns--inferno"></div>
-            <div class="towns--necropolis"></div>
-            <div class="towns--neutral"></div>
-            <div class="towns--rampart"></div>
-            <div class="towns--stronghold"></div>
-            <div class="towns--tower"></div>
+            <div id="castle" class="town townSelection"></div>
+            <div id="conflux" class="town"></div>
+            <div id="cove" class="town"></div>
+            <div id="dungeon" class="town"></div>
+            <div id="fortress" class="town"></div>
+            <div id="inferno" class="town"></div>
+            <div id="necropolis" class="town"></div>
+            <div id="neutral" class="town"></div>
+            <div id="rampart" class="town"></div>
+            <div id="stronghold" class="town"></div>
+            <div id="tower" class="town"></div>
         </div>
-        <div class="container2">
-            <div class="creatures">
-                <div class="row">
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                    <div class="creature">
-                        <div class="simple"></div>
-                        <div class="upgraded"></div>
-                    </div>
-                </div>
+        <div class="pitlord">
+            <div class="pitlord--sprite"></div>
+        </div>
+        <div class="creatures">
+            <div id="level1" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
             </div>
-            <div class="pitlord"></div>
+            <div id="level2" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
+            <div id="level3" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
+            <div id="level4" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
+            <div id="level5" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
+            <div id="level6" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
+            <div id="level7" class="creature">
+                <div class="simple"></div>
+                <div class="upgraded"></div>
+            </div>
         </div>
     </div>
 
