--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
                 <div class="upgraded"></div>
             </div>
         </div>
+        <footer>
+            <p>Александр Костарев</p>
+            <p><a href="mailto:UniverAlex@ya.ru">UniverAlex@ya.ru</a></p>
+        </footer>
     </div>
-
-    <footer>
-        <span>Наскрябал UniverAlex</span>
-    </footer>
-
 </body>
 
 </html>
