Use sprite sheets for creature list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <div id="dungeon" class="town"></div>
             <div id="fortress" class="town"></div>
             <div id="inferno" class="town"></div>
-            <div id="necropolis" class="town"></div>
             <div id="neutral" class="town"></div>
             <div id="rampart" class="town"></div>
             <div id="stronghold" class="town"></div>
@@ -28,35 +27,8 @@
         <div class="pitlord">
             <div class="pitlord--sprite"></div>
         </div>
-        <div class="creatures">
-            <div id="level1" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level2" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level3" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level4" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level5" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level6" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
-            <div id="level7" class="creature">
-                <div class="simple"></div>
-                <div class="upgraded"></div>
-            </div>
+        <div id="creatureList">
+
         </div>
         <footer>
             <p>Александр Костарев</p>
