add all town creatures

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         </div>
         <div class="pitlord">
             <div class="pitlord--sprite"></div>
+            <div class="pitlord--count">
+                <!-- <div class="pitlord--count">10</div> -->
+                <div class="arrow arrow-left"></div>
+                <input id="pitlord--count--input" type="number" />
+                <!-- <input id="pitlord--range" type="range" min="1" max="20" /> -->
+                <div class="arrow arrow-rigth"></div>
+            </div>
+            <div class="mirror pitlord--sprite"></div>
         </div>
         <div id="creatureList">
 
