--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/view.js"></script>
-    <script type="text/javascript" src="js/model.js"></script>
 </head>
 
 <body>
@@ -32,23 +31,25 @@
         <div id="pitlords-number" class="card">
             <div class="pitlord-pic"></div>
             <div class="center">
-                <div class="arrow" onclick="this.nextElementSibling.stepDown()"></div>
-                <input min="1" max="999" type="number" value="1" class="number">
-                <div class="arrow mirror" onclick="this.previousElementSibling.stepUp()"></div>
+                <div class="arrow" onclick="numberDown(event)"></div>
+                <input id="pitlord-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
+                    oninput="onInput()">
+                <div class="arrow mirror" onclick="numberUp(event)"></div>
             </div>
             <div class=" pitlord-pic mirror"></div>
         </div>
         <div id="creatures-list" class="card"></div>
         <div id="sacrificed-number" class="card center">
-            <div class="arrow" onclick="this.nextElementSibling.stepDown()"></div>
-            <input min="1" max="999" type="number" value="1" class="number">
-            <div class="arrow mirror" onclick="this.previousElementSibling.stepUp()"></div>
+            <div class="arrow" onclick="numberDown(event)"></div>
+            <input id="creature-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
+                oninput="onInput()">
+            <div class="arrow mirror" onclick="numberUp(event)"></div>
         </div>
         <div id="efficient-number" class="card center">
             <div class="number">0</div>
         </div>
         <div id="demons-number" class="card center">
-            <div class="number">0</div>
+            <div id="result" class="number">0</div>
         </div>
         <footer class="card">
             <p>Александр Костарев</p>
