--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>HoMM 3 demonology</title>
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
@@ -49,7 +49,9 @@
             <div class="number">0</div>
         </div>
         <div id="demons-number" class="card center">
+            <div class="demon-pic"></div>
             <div id="result" class="number">0</div>
+            <div class="demon-pic mirror"></div>
         </div>
         <footer class="card">
             <p>Александр Костарев</p>
