--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
         <div id="pitlords-number" class="card">
             <div class="pitlord-pic"></div>
             <div class="center">
-                <div class="arrow" onclick="numberDown(event)"></div>
+                <div class="arrow left" onclick="numberDown(event)"></div>
                 <input id="pitlord-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
                     oninput="onInput()">
-                <div class="arrow mirror" onclick="numberUp(event)"></div>
+                <div class="arrow right" onclick="numberUp(event)"></div>
             </div>
             <div class=" pitlord-pic mirror"></div>
         </div>
         <div id="creatures-list" class="card"></div>
         <div id="sacrificed-number" class="card center">
-            <div class="arrow" onclick="numberDown(event)"></div>
-            <input id="creature-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
-                oninput="onInput()">
-            <div class="arrow mirror" onclick="numberUp(event)"></div>
+            <div>Пожертвовать:</div>
+            <div class="center">
+                <div class="arrow left" onclick="numberDown(event)"></div>
+                <input id="creature-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
+                    oninput="onInput()">
+                <div class="arrow right" onclick="numberUp(event)"></div>
+            </div>
         </div>
         <div id="efficient-number" class="card center">
+            <div>Минимальная жертва:</div>
             <div class="number">0</div>
         </div>
         <div id="demons-number" class="card center">
