calc efficent number

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div id="efficient-number" class="card center">
-            <div>Минимальная жертва:</div>
-            <div class="number">0</div>
+            <div>Эффективная жертва:</div>
+            <div id="efficent-result" class="number">0</div>
         </div>
         <div id="demons-number" class="card center">
             <div class="demon-pic"></div>
