separate view code from logic code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/view.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
@@ -48,8 +48,8 @@
                 <div class="arrow right" onclick="numberUp(event)"></div>
             </div>
         </div>
-        <div id="efficient-number" class="card center">
-            <div class="title">Эффективная жертва:</div>
+        <div id="optimal-number" class="card center">
+            <div class="title">Оптимальная жертва:</div>
             <div id="efficent-result" class="number">0</div>
         </div>
         <div id="demons-number" class="card center">
