--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="center">
                 <div class="arrow left" onclick="numberDown(event)"></div>
                 <input id="pitlord-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
-                    oninput="onInput()">
+                    oninput="onInput(event)">
                 <div class="arrow right" onclick="numberUp(event)"></div>
             </div>
             <div class=" pitlord-pic mirror"></div>
@@ -44,7 +44,7 @@
             <div class="center">
                 <div class="arrow left" onclick="numberDown(event)"></div>
                 <input id="creature-input" min="1" max="999" type="number" value="1" maxlength="3" class="number"
-                    oninput="onInput()">
+                    oninput="onInput(event)">
                 <div class="arrow right" onclick="numberUp(event)"></div>
             </div>
         </div>
