--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <link rel="icon" href="img/favicon.png">
 </head>
 
 <body>
