--- a/index.html
+++ b/index.html
@@ -59,9 +59,37 @@
             <div class="demon-pic mirror"></div>
         </div>
         <footer class="card">
-            <p>Александр Костарев</p>
-            <p><a href="mailto:UniverAlex@ya.ru">UniverAlex@ya.ru</a></p>
+            <a href="#how-to" _onclick="document.getElementById('how-to-dialog').showModal()">Что это?</a>
+            <div>
+                <p>Александр Костарев</p>
+                <p><a href="mailto:UniverAlex@ya.ru">UniverAlex@ya.ru</a></p>
+            </div>
         </footer>
+    </div>
+    <div id="how-to">
+        <div class="card">
+            <h2>Что это?</h2>
+            <p>
+                Перед вами сайт-калькулятор механики демонения из игры Heroes of Might and Magic 3.
+            </p>
+            <p>Демонение (демонология) это способность "Адских отродьев", на слэнге "Питлордов" или "Питов", создавать
+                демонов из
+                мёртвых отрядов союзников. Сами "Питлорды" это существа пятого уровня в замке расы "Инферно".
+            </p>
+            <img src="img/pitlord_window.png" alt='Окно с характеристиками "Питлорда"'>
+            <p>Созданые таким образом демоны остаются и после боя. Поэтому с помощью демонения можно превращать других
+                существ в
+                демонов.</p>
+            <h2>Как пользоваться</h2>
+            <ol>
+                <li>Укажите количество ваших питлордов;</li>
+                <li>Выберите город и существо, которое хотите задемонить;</li>
+                <li>Укажите его количество.</li>
+            </ol>
+            <h2>Совместимость с игрой</h2>
+            <p>Данные для существ собраны для дополнения Horn Of the Abyss.</p>
+            <a href="#" class="ok-button"></a>
+        </div>
     </div>
 </body>
 
