decrease how-to page height

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                 демонов из
                 мёртвых отрядов союзников. Сами "Питлорды" это существа пятого уровня в замке расы "Инферно".
             </p>
-            <img src="img/pitlord_window.png" alt='Окно с характеристиками "Питлорда"'>
+            <img id="pitlord-window" src="img/pitlord_window.png" alt='Окно с характеристиками "Питлорда"'>
             <p>Созданые таким образом демоны остаются и после боя. Поэтому с помощью демонения можно превращать других
                 существ в
                 демонов.</p>
@@ -86,8 +86,6 @@
                 <li>Выберите город и существо, которое хотите задемонить;</li>
                 <li>Укажите его количество.</li>
             </ol>
-            <h2>Совместимость с игрой</h2>
-            <p>Данные для существ собраны для дополнения Horn Of the Abyss.</p>
             <a href="#" class="ok-button"></a>
         </div>
     </div>
