--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HoMM 3 demonology</title>
+    <title>HoMM3 | Демонение</title>
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
@@ -59,7 +59,8 @@
             <div class="demon-pic mirror"></div>
         </div>
         <footer class="card">
-            <a href="#how-to" _onclick="document.getElementById('how-to-dialog').showModal()">Что это?</a>
+            <a id="how-to-link" href="#how-to" _onclick="document.getElementById('how-to-dialog').showModal()">Что
+                это?</a>
             <div>
                 <p>Александр Костарев</p>
                 <p><a href="mailto:UniverAlex@ya.ru">UniverAlex@ya.ru</a></p>
