--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HoMM3 | Демонение</title>
+    <meta name="description"
+        content="Перед вами сайт-калькулятор механики демонения для игры Heroes of Might and Magic 3." />
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
@@ -58,6 +60,10 @@
             <div id="result" class="number">0</div>
             <div class="demon-pic mirror"></div>
         </div>
+        <div id="cost" class="card">
+            <div id="cost-result" class="number">0</div>
+            <div id="cost-pic"></div>
+        </div>
         <footer class="card">
             <a id="how-to-link" href="#how-to" _onclick="document.getElementById('how-to-dialog').showModal()">Что
                 это?</a>
@@ -71,16 +77,14 @@
         <div class="card">
             <h2>Что это?</h2>
             <p>
-                Перед вами сайт-калькулятор механики демонения из игры Heroes of Might and Magic 3.
+                Перед вами сайт-калькулятор механики демонения для игры Heroes of Might and Magic 3.
             </p>
-            <p>Демонение (демонология) это способность "Адских отродьев", на слэнге "Питлордов" или "Питов", создавать
-                демонов из
-                мёртвых отрядов союзников. Сами "Питлорды" это существа пятого уровня в замке расы "Инферно".
+            <p>Демонение это способность адских отродьев, на слэнге питлордов или питов, создавать
+                демонов из ваших погибших отрядов. Сами питлорды это существа пятого уровня в замке расы Инферно.
             </p>
             <img id="pitlord-window" src="img/pitlord_window.png" alt='Окно с характеристиками "Питлорда"'>
             <p>Созданые таким образом демоны остаются и после боя. Поэтому с помощью демонения можно превращать других
-                существ в
-                демонов.</p>
+                существ в демонов.</p>
             <h2>Как пользоваться</h2>
             <ol>
                 <li>Укажите количество ваших питлордов;</li>
