--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <div id="demons-number" class="card center">
             <div class="demon-pic"></div>
             <div id="result" class="number">0</div>
-            <div class="demon-pic mirror"></div>
+            <!-- <div class="demon-pic mirror"></div> -->
         </div>
         <div id="cost" class="card">
             <div id="cost-result" class="number">0</div>
