--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HoMM3 | Демонение</title>
     <meta name="description"
-        content="Перед вами сайт-калькулятор механики демонения для игры Heroes of Might and Magic 3." />
+        content="Перед вами сайт-калькулятор механики демонения для игры Heroes of Might and Magic 3.
+        Демонение или демонология — это спосбность адских отродьев создавать демонов из ваших павших отрядов. Это позволяет быстро собрать сильный отряд." />
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
