put calculator in separate file

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/calculator.js"></script>
     <link rel="icon" href="img/favicon.png">
 </head>
 
