migrate to .webp

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/nullify.css">
     <link rel="stylesheet" href="css/towns_backgrounds.css">
     <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/app.mjs"></script>
     <link rel="icon" href="https://demon-calc.ru/favicon.ico" type="image/x-icon">
+    <script type="module" src="js/app.js"></script>
 </head>
 
 <body>
@@ -58,7 +58,6 @@
         <div id="demons-number" class="card center">
             <div class="demon-pic"></div>
             <div id="result" class="number">0</div>
-            <!-- <div class="demon-pic mirror"></div> -->
         </div>
         <div id="cost" class="card">
             <div id="cost-result" class="number">0</div>
@@ -82,7 +81,7 @@
             <p>Демонение это способность адских отродьев, на слэнге питлордов или питов, создавать
                 демонов из ваших погибших отрядов. Сами питлорды это существа пятого уровня в замке расы Инферно.
             </p>
-            <img id="pitlord-window" src="img/pitlord_window.png" alt='Окно с характеристиками "Питлорда"'>
+            <img id="pitlord-window" src="img/pitlord_window.webp" alt='Окно с характеристиками "Питлорда"'>
             <p>Созданые таким образом демоны остаются и после боя. Поэтому с помощью демонения можно превращать других
                 существ в демонов.</p>
             <h2>Как пользоваться</h2>
