--- a/src/index.html
+++ b/src/index.html
@@ -44,10 +44,12 @@
             <div class=" pitlord-pic mirror"></div>
         </div>
         <div id="artifacts-list" class="card">
-            <div id="ring_of_Vitality"></div>
-            <div id="ring_of_Life"></div>
-            <div id="vial_of_Lifeblood"></div>
-            <div id="elixir_of_Life"></div>
+            <div id="component-artifacts">
+                <div id="ring_of_Vitality" class="artifact"></div>
+                <div id="ring_of_Life" class="artifact"></div>
+                <div id="vial_of_Lifeblood" class="artifact"></div>
+            </div>
+            <div id="elixir_of_Life" class="artifact"></div>
         </div>
         <div id="creatures-list" class="card"></div>
         <div id="sacrificed-number" class="card panel">
