work on media queries

--- a/src/index.html
+++ b/src/index.html
@@ -88,20 +88,14 @@
         <div class="card">
             <h2>Что это?</h2>
             <p>
-                Перед вами сайт-калькулятор механики демонения для игры Heroes of Might and Magic 3.
+                Перед вами сайт-калькулятор механики демонения для игры <i>Heroes of Might and Magic 3</i>.
             </p>
-            <p>Демонение это способность адских отродьев, на слэнге питлордов или питов, создавать
+            <p>Демонение — это способность адских отродьев, на слэнге питлордов или питов, создавать
                 демонов из ваших погибших отрядов. Сами питлорды это существа пятого уровня в замке расы Инферно.
             </p>
             <img id="pitlord-window" src="img/pitlord_window.webp" alt='Окно с характеристиками "Питлорда"'>
             <p>Созданые таким образом демоны остаются и после боя. Поэтому с помощью демонения можно превращать других
                 существ в демонов.</p>
-            <h2>Как пользоваться</h2>
-            <ol>
-                <li>Укажите количество ваших питлордов;</li>
-                <li>Выберите город и существо, которое хотите задемонить;</li>
-                <li>Укажите его количество.</li>
-            </ol>
             <a href="#" class="ok-button"></a>
         </div>
     </div>
